# Nossa_Caixa

NossaCaixa1.0/: CMakeLists.txt  Calor_vis.mac  Guide_Calor5.0.odt  Makefile  NossaCaixa1.0.cc  initInterAll.mac  instalacao_v11.2.2.txt
NossaCaixa1.0-build/: CMakeCache.txt  Calor5.0  CalorRunInfo.txt  Makefile  NossaCaixa1.0  SoDetBox.stl  Test_Calor.root  cmake_install.cmake  initInter.mac
NossaCaixa1.0/Examples_Version5/: Angles.C  LaBr3_sort.C  PDG_ZA.C
NossaCaixa1.0/Examples_Version5/Gamma/Angular_Distribution/: CalorRunInfo_AngDist.txt  CalorRunInfo_Isotropic.txt  initInter.mac  run_batch_AngDist.mac  run_batch_Isotropic.mac
NossaCaixa1.0/Examples_Version5/Gamma/Detector_3x3block/: CalorRunInfo.txt  Calor_vis.mac  ROOT_Scan_Calor.txt  Test_3x3block_500keV.root  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/Gamma/Isotropic_250keV/: CalorRunInfo.txt  ROOT_Scan_Calor.txt  Test_gamma_250keV.root  Tracking_example_1.txt  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/Gamma/Upper_part_500keV/: CalorRunInfo.txt  ROOT_Scan_Calor.txt  Test_gamma_500keV.root  Tracking_Example_500keV.txt  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/IntrinsicRadioactivity/LYSO/: CalorRunInfo.txt  ROOT_Scan.txt  Test_Intrinsic_LYSO.root  Tracking_1.txt  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/IntrinsicRadioactivity/LaBr3/: CalorRunInfo.txt  ROOT_Scan.txt  Test_Intrinsic_LaBr3.root  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/Neutrons/Upper_part_2MeV/: CalorRunInfo.txt  ROOT_Scan_Calor.txt  Run_neutron_2MeV.root  Test_neutron_2MeV.root  Tracking_Example_2MeV.txt  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/PhaseSpace/: CalorRunInfo.txt  Check_events.txt  ROOT_Scan_Calor.txt  ROOT_Scan_PhaseSpace.txt  Run_PhaseSpace.root  Test_PhaseSpace.root  Tracking_1.txt  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/PhaseSpace/Without_Chamber/: Calor5.0  CalorRunInfo.txt  PhSpRunInfo.txt  ROOT_Scan_Calor.txt  Test_PhaseSpace.root  initInter.mac
NossaCaixa1.0/Examples_Version5/Radioisotope/Ba133/: CalorRunInfo.txt  ROOT_Scan.txt  Test_Ba133.root  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/Radioisotope/Co60/: CalorRunInfo.txt  Calor_vis.mac  ROOT_Scan.txt  Test_Co60.root  Tracking_1.txt  initInter.mac  run_batch.mac
NossaCaixa1.0/Examples_Version5/Radioisotope/DopplerShift/: CalorRunInfo_Doppler_Example.txt  Run_Doppler_O20.root  Test_Doppler_O20.root  initInter.mac  run_batch.mac
NossaCaixa1.0/Resources/AngularDistribution/: DistribAngular_Zero.txt  MonteCarlo_AngularDistribution_V1.odt
NossaCaixa1.0/Resources/AngularDistribution/DistrAngular_test/: DistAng_V1  DistAng_V1.cpp  DistAng_V1file  DistAng_V1file.cpp  DistAng_V2file  DistAng_V2file.cpp  DistAng_V3file  DistAng_V3file.cpp  GNUPLOT_OnSphereSurface.txt  plotDistAng2deg06.gpl  plotSph2deg.gpl  plotTWSph.gpl  plotTWSph1e6.gpl  plotTWSph1e7.gpl  plotTesteSph.gpl
NossaCaixa1.0/Resources/AngularDistribution/DistrAngular_test/testes1/: DistAng10deg_04  DistAng1deg_04  DistAng2deg_04  DistAng2deg_05  DistAng2deg_06  DistAng5deg_04  DistAngNorm20degSolA_03  DistAngNorm20deg_03  DistAng_01  DistAng_01.cpp  DistAng_02  DistAng_02.cpp  DistAng_03  DistAng_03.cpp  DistAng_04.cpp  DistAng_05.cpp  DistAng_06.cpp  HE.ods  plotDistAng.gpl  plotDistAng10deg.gpl  plotDistAng2deg.gpl
NossaCaixa1.0/Resources/AngularDistribution/SphericalHarmonics/: G4NuclearPolarizationCERN.pptx
NossaCaixa1.0/Resources/DetectorElement/: DetectorElement.odg
NossaCaixa1.0/Resources/PhaseSpace_output/: Analysis_out.ods  PhSpOut.txt  trackingDetailPhSp.out
NossaCaixa1.0/Wkq_files/: DistribAngular_Zero.txt
NossaCaixa1.0/include/: CalorActionInitialization.hh  CalorDetectorConstruction.hh  CalorDetectorMessenger.hh  CalorEventAction.hh  CalorHistoManager.hh  CalorPhysicsList.hh  CalorPhysicsListMessenger.hh  CalorPrimaryGeneratorAction.hh  CalorPrimaryGeneratorMessenger.hh  CalorRunAction.hh  CalorRunActionMessenger.hh  CalorSteppingAction.hh  DetectorElement.hh  SphericalHarmonicsSampling.hh
NossaCaixa1.0/src/: CalorActionInitialization.cc  CalorDetectorConstruction.cc  CalorDetectorMessenger.cc  CalorEventAction.cc  CalorHistoManager.cc  CalorPhysicsList.cc  CalorPhysicsListMessenger.cc  CalorPrimaryGeneratorAction.cc  CalorPrimaryGeneratorMessenger.cc  CalorRunAction.cc  CalorRunActionMessenger.cc  CalorSteppingAction.cc  DetectorElement.cc  SphericalHarmonicsSampling.cc
